# diabetes-risk-screener

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
app/: main.py  schema.py
app/templates/: index.html
docs/: file_structure.md
model/: model.pkl  model_metadata.json  tuning_results.json
notebooks/: Data Analysis.ipynb  LogisticRegression_Hyperparameter_Tuning.ipynb  Model_Comparison_and_Deployment.ipynb  README.md  RandomForest_Hyperparameter_Tuning.ipynb  XGBoost_Hyperparameter_Tuning.ipynb
