[project]
name = "Diabetes_prediction"
version = "1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
    "xgboost>=3.3.0",
]

[tool.uv]
constraint-dependencies = ["numba>=0.60", "llvmlite>=0.43"]
