[project]
name = "diabetes-risk-prediction"
version = "1.0.0"
description = "Diabetes risk screening FastAPI app"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "numpy",
    "pandas",
    "python-multipart>=0.0.32",
    "scikit-learn",
    "xgboost",
]

[project.optional-dependencies]
# Notebook/EDA/training tooling -- local-only, not installed in the deployed app's image.
# uv sync --extra research
research = [
    "jupyter",
    "matplotlib",
    "optuna",
    "plotly",
    "seaborn",
]

[tool.uv]
override-dependencies = ["nvidia-nccl-cu12; python_version < '0'"]
